--- a/public/index.html
+++ b/public/index.html
@@ -677,16 +677,16 @@
                     <div>
                       <form action="forms/contact.php" method="post" role="form" class="php-email-form">
                         <div class="row">
-                          <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                            </div>
-                          </div>
-                          <div class="col-md-12 mb-3">
-                            <div class="form-group">
-                              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                            </div>
-                          </div>
+<!--                          <div class="col-md-12 mb-3">-->
+<!--                            <div class="form-group">-->
+<!--                              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>-->
+<!--                            </div>-->
+<!--                          </div>-->
+<!--                          <div class="col-md-12 mb-3">-->
+<!--                            <div class="form-group">-->
+<!--                              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>-->
+<!--                            </div>-->
+<!--                          </div>-->
                           <div class="col-md-12 mb-3">
                             <div class="form-group">
                               <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
@@ -694,7 +694,7 @@
                           </div>
                           <div class="col-md-12">
                             <div class="form-group">
-                              <textarea class="form-control" name="message" rows="5" placeholder="Message" required></textarea>
+                              <textarea class="form-control" name="message" id="message"  rows="5" placeholder="Message" required></textarea>
                             </div>
                           </div>
                           <div class="col-md-12 text-center my-3">
@@ -703,7 +703,7 @@
                             <div class="sent-message">Your message has been sent. Thank you!</div>
                           </div>
                           <div class="col-md-12 text-center">
-                            <button type="submit" class="button button-a button-big button-rouded">Send Message</button>
+                            <button type="button" onclick="openMail()" class="button button-a button-big button-rouded">Send Message</button>
                           </div>
                         </div>
                       </form>
@@ -723,17 +723,17 @@
                         mollitia inventore?
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> 329 WASHINGTON ST BOSTON, MA 02108</li>
-                        <li><span class="bi bi-phone"></span> (617) 557-0089</li>
-                        <li><span class="bi bi-envelope"></span> contact@example.com</li>
+                        <li><span class="bi bi-geo-alt"></span> Kempton Park, Isando</li>
+                        <li><span class="bi bi-phone"></span> (066) 546-4921</li>
+                        <li><span class="bi bi-envelope"></span> mxolisi.nkabinde@festo.com</li>
                       </ul>
                     </div>
                     <div class="socials">
                       <ul>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
-                        <li><a href=""><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
+<!--                        <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>-->
+<!--                        <li><a href=""><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>-->
+<!--                        <li><a href=""><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>-->
+                        <li><a href="https://www.linkedin.com/in/mxolisi-nkabinde-47984517b/" target="_blank"><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
                     </div>
                   </div>
@@ -782,6 +782,16 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <!-- A Lazy Mans Script -->
+  <script>
+    const openMail = () => {
+      const subject = document.getElementById('subject');
+      const content = document.getElementById('message');
+
+      document.location = `mailto:mxolisi.nkabinde@festo.com?subject=${subject.value}&body=${content.value}`;
+    }
+  </script>
 
 </body>
 
