added links to email and cell number

--- a/public/index.html
+++ b/public/index.html
@@ -107,8 +107,8 @@
                       <div class="about-info">
                         <p><span class="title-s">Name: </span> <span>Mxolisi Nkabinde.</span></p>
                         <p><span class="title-s">Profile: </span> <span>Facilities Manager, Health and Safety Consultant.</span></p>
-                        <p><span class="title-s">Email: </span> <span>mxolisi.nkabinde@festo.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>066-546-4921</span></p>
+                        <p><span class="title-s">Email: </span> <span><a href="mailto:mxolisi.nkabinde@festo.com">mxolisi.nkabinde@festo.com</a></span></p>
+                        <p><span class="title-s">Phone: </span> <span><a href="tel:+27665464921">066-546-4921</a></span></p>
                       </div>
                     </div>
                   </div>
@@ -724,8 +724,8 @@
                       </p>
                       <ul class="list-ico">
                         <li><span class="bi bi-geo-alt"></span> Kempton Park, Isando</li>
-                        <li><span class="bi bi-phone"></span> (066) 546-4921</li>
-                        <li><span class="bi bi-envelope"></span> mxolisi.nkabinde@festo.com</li>
+                        <li><span class="bi bi-phone"></span><a href="tel:+27665464921">(066) 546-4921</a></li>
+                        <li><span class="bi bi-envelope"></span><a href="mailto:mxolisi.nkabinde@festo.com">mxolisi.nkabinde@festo.com</a></li>
                       </ul>
                     </div>
                     <div class="socials">
